fixed icons not showing problem

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
  /* ------ GENERAl LAYOUT ------ */
  * {
-    font-family: 'Poppins', sans-serif !important;
+    font-family: 'Poppins', sans-serif;
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
